readd name instance

--- a/app/views/adventures/index.html.erb
+++ b/app/views/adventures/index.html.erb
@@ -17,7 +17,7 @@
   <tbody>
     <% @adventures.each do |adventure| %>
       <tr>
-        <td><% adventure.name %></td>
+        <td><%= adventure.name %></td>
         <td><%= adventure.description %></td>
         <td><%= adventure.picture %></td>
         <td><%= adventure.location %></td>
