--- a/app/views/adventures/index.html.erb
+++ b/app/views/adventures/index.html.erb
@@ -19,7 +19,7 @@
       <tr>
         <td><%= adventure.name %></td>
         <td><%= adventure.description %></td>
-        <td><%= adventure.picture %></td>
+        <td><%= image_tag(adventure.picture_url, :width => 600) if adventure.picture.present? %></td>
         <td><%= adventure.location %></td>
         <td><%= adventure.visit %></td>
         <td><%= link_to 'Show', adventure %></td>
