--- a/app/views/adventures/_form.html.erb
+++ b/app/views/adventures/_form.html.erb
@@ -27,6 +27,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :picture_url %>
+    <%= form.text_field :picture_url, id: :adventure_picture_url %>
+  </div>
+
+  <div class="field">
     <%= form.label :location %>
     <%= form.text_field :location, id: :adventure_location %>
   </div>
