add remote picture url functionality

--- a/app/views/adventures/_form.html.erb
+++ b/app/views/adventures/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <%= form.label :picture_url %>
-    <%= form.text_field :picture_url, id: :adventure_picture_url %>
+    <%= form.text_field :remote_picture_url, id: :adventure_picture_url %>
   </div>
 
   <div class="field">
